// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarMenu renders in the closed and left state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-dropdown pf-u-display-flex"
        data-ouia-component-id="OUIA-Generated-Dropdown-1"
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Toggle account actions"
          class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="pf-dropdown-toggle-id-0"
          type="button"
        >
          <span>
            <img
              alt="avatar"
              class="pf-c-avatar"
              src=""
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-dropdown pf-u-display-flex"
      data-ouia-component-id="OUIA-Generated-Dropdown-1"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Toggle account actions"
        class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-0"
        type="button"
      >
        <span>
          <img
            alt="avatar"
            class="pf-c-avatar"
            src=""
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AvatarMenu renders in the closed and right state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-dropdown pf-m-align-right pf-u-display-flex"
        data-ouia-component-id="OUIA-Generated-Dropdown-3"
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Toggle account actions"
          class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="pf-dropdown-toggle-id-2"
          type="button"
        >
          <span>
            <img
              alt="avatar"
              class="pf-c-avatar"
              src=""
            />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-dropdown pf-m-align-right pf-u-display-flex"
      data-ouia-component-id="OUIA-Generated-Dropdown-3"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Toggle account actions"
        class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-2"
        type="button"
      >
        <span>
          <img
            alt="avatar"
            class="pf-c-avatar"
            src=""
          />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AvatarMenu renders in the open and left state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-dropdown pf-m-expanded pf-u-display-flex"
        data-ouia-component-id="OUIA-Generated-Dropdown-2"
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Toggle account actions"
          class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="pf-dropdown-toggle-id-1"
          type="button"
        >
          <span>
            <img
              alt="avatar"
              class="pf-c-avatar"
              src=""
            />
          </span>
        </button>
        <ul
          aria-labelledby="pf-dropdown-toggle-id-1"
          class="pf-c-dropdown__menu"
          role="menu"
        >
          <li
            role="none"
          >
            <button
              aria-disabled="false"
              class="pf-c-dropdown__menu-item"
              data-ouia-component-id="OUIA-Generated-DropdownItem-1"
              data-ouia-component-type="PF4/DropdownItem"
              data-ouia-safe="true"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              Logout
            </button>
          </li>
          <li
            role="none"
          >
            <button
              aria-disabled="false"
              class="pf-c-dropdown__menu-item"
              data-ouia-component-id="OUIA-Generated-DropdownItem-2"
              data-ouia-component-type="PF4/DropdownItem"
              data-ouia-safe="true"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              About
            </button>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-dropdown pf-m-expanded pf-u-display-flex"
      data-ouia-component-id="OUIA-Generated-Dropdown-2"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
    >
      <button
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Toggle account actions"
        class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-1"
        type="button"
      >
        <span>
          <img
            alt="avatar"
            class="pf-c-avatar"
            src=""
          />
        </span>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-1"
        class="pf-c-dropdown__menu"
        role="menu"
      >
        <li
          role="none"
        >
          <button
            aria-disabled="false"
            class="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-1"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe="true"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Logout
          </button>
        </li>
        <li
          role="none"
        >
          <button
            aria-disabled="false"
            class="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-2"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe="true"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            About
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AvatarMenu renders in the open and right state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-dropdown pf-m-align-right pf-m-expanded pf-u-display-flex"
        data-ouia-component-id="OUIA-Generated-Dropdown-4"
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe="true"
      >
        <button
          aria-expanded="true"
          aria-haspopup="true"
          aria-label="Toggle account actions"
          class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
          data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
          data-ouia-component-type="PF4/DropdownToggle"
          data-ouia-safe="true"
          id="pf-dropdown-toggle-id-3"
          type="button"
        >
          <span>
            <img
              alt="avatar"
              class="pf-c-avatar"
              src=""
            />
          </span>
        </button>
        <ul
          aria-labelledby="pf-dropdown-toggle-id-3"
          class="pf-c-dropdown__menu pf-m-align-right"
          role="menu"
        >
          <li
            role="none"
          >
            <button
              aria-disabled="false"
              class="pf-c-dropdown__menu-item"
              data-ouia-component-id="OUIA-Generated-DropdownItem-3"
              data-ouia-component-type="PF4/DropdownItem"
              data-ouia-safe="true"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              Logout
            </button>
          </li>
          <li
            role="none"
          >
            <button
              aria-disabled="false"
              class="pf-c-dropdown__menu-item"
              data-ouia-component-id="OUIA-Generated-DropdownItem-4"
              data-ouia-component-type="PF4/DropdownItem"
              data-ouia-safe="true"
              role="menuitem"
              tabindex="-1"
              type="button"
            >
              About
            </button>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-dropdown pf-m-align-right pf-m-expanded pf-u-display-flex"
      data-ouia-component-id="OUIA-Generated-Dropdown-4"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
    >
      <button
        aria-expanded="true"
        aria-haspopup="true"
        aria-label="Toggle account actions"
        class="pf-c-dropdown__toggle pf-m-plain pf-u-p-0 pf-x-account-actions pf-x-avatar"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-3"
        type="button"
      >
        <span>
          <img
            alt="avatar"
            class="pf-c-avatar"
            src=""
          />
        </span>
      </button>
      <ul
        aria-labelledby="pf-dropdown-toggle-id-3"
        class="pf-c-dropdown__menu pf-m-align-right"
        role="menu"
      >
        <li
          role="none"
        >
          <button
            aria-disabled="false"
            class="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-3"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe="true"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            Logout
          </button>
        </li>
        <li
          role="none"
        >
          <button
            aria-disabled="false"
            class="pf-c-dropdown__menu-item"
            data-ouia-component-id="OUIA-Generated-DropdownItem-4"
            data-ouia-component-type="PF4/DropdownItem"
            data-ouia-safe="true"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            About
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
